--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,18 @@
-# Prerequisites
-*.d
+*.user 
+*.user.* 
+*.autosavouser
+*.orig
+*.autosave
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+*.opendb 
+*.pdb
+*.db
+*.suo
+*.cache
+*.deps
+*.filters
+*.log
+*.pyc
+logs/
+pids.json
+*d.dll
